Fix player tabs overlapping

--- a/app/src/components/Tabs/Tabs.scss
+++ b/app/src/components/Tabs/Tabs.scss
@@ -39,9 +39,8 @@
       color: white;
       padding: 12px 10px;
       color: $gray-60;
-      font-size: 0.8em;
+      font-size: 0.7em;
       text-align: center;
-      min-width: 70px;
 
       &.-highlighted {
         background: $gray-12;
